@@ -43,6 +43,7 @@
             Graphics: fix endianness of palette when used with `g.asImage`
             Fix issue using String.replace on flash-based (read only) strings
             Bangle.js2: Stop Bangle.setLCDBrightness turning the LCD backlight on 
+            Graphics.drawImages: add 'compose' and 'palette' operators to allow one image to be composed on another (for instance XOR on background)
 
      2v21 : nRF52: free up 800b more flash by removing vector table padding
             Throw Exception when a Promise tries to resolve with another Promise (#2450)
